Fixed a CSS bug that was overlapping with Juicer IO's built in styling

--- a/public/reusable.css
+++ b/public/reusable.css
@@ -130,6 +130,12 @@
   
     transition: border 0.2s;
   }
+
+  .j-overlay a:link,
+  .jay-overlay a:visited {
+    border-bottom: none;
+  }
+
   a:hover,
   a:active {
     color: #555;
